# doctor-service

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: app.rs  db.rs  http_client.rs  main.rs
src/app/: routes.rs  types.rs
src/app/routes/: authentication.rs  doctors.rs  healthcheck.rs  issue_prescription.rs  notification.rs  rating.rs  specialties.rs
src/app/views/: index.html  issuePrescription.html  login.html  register.html
src/db/: schemas.rs
src/db/schemas/: credential.rs  doctor.rs  medicine.rs  notification.rs  prescription.rs  rating.rs  specialty.rs
