[package]
name = "doctor-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
axum-macros="0.3.0"
tokio = "1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1"
mongodb = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
anyhow = "1.0"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
argon2 = "0.4.1"
enum-as-inner = "0.5.1"
futures = "0.3.25"
